<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6A000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                style="Sap"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/default_icon_app" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/txvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textColor="#FF0000"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/rlUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:src="@drawable/username" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="310dp"
        android:layout_height="247dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_e"
        android:hint="@string/username"
        android:inputType="text"
        android:lines="1"
        android:maxLength="20"

        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imgCheckUsername"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:padding="15dp"
                    android:src="@drawable/yes"
                    android:visibility="gone"
                    />
            </RelativeLayout>

            <View
                android:id="@+id/viewLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#fff"
                android:visibility="gone"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:src="@drawable/username" />

                <EditText
                    android:id="@+id/edtMail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/bg_e"
                    android:hint="@string/mail"
                    android:inputType="text"
                    android:lines="1"

                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imgChekUsername"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:padding="15dp"
                    android:src="@drawable/yes"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#fff" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:src="@drawable/password" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/bg_e"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="20"

                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imgChekPassword"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:padding="15dp"
                    android:src="@drawable/yes"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#fff" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/bg_button"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="3dp">

            <TextView
                android:id="@+id/tvSuggess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/suggest_register"
                android:textColor="#BAFFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:backgroundTint="@null"
                android:text="@string/sign_up"
                android:textColor="#F83265"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

    <include
        android:id="@+id/cslProgress"
        layout="@layout/progress_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
